# vulkan-sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.dev.md  README.md
assets/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
assets/images/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  shader.frag  shader.vert
assets/sounds/: CMakeLists.txt
src/vulkan-sandbox/: CMakeLists.txt  addition.c  addition.h  couple.h  division.c  division.h  errors.c  errors.h  extensions.c  extensions.h  glfw-and-vulkan.h  images.c  images.h  imageviews.c  imageviews.h  instance.c  instance.h  layers.c  layers.h  logical-device.c  logical-device.h  main.c  messenger.c  messenger.h  multiplication.c  multiplication.h  physical-device.c  physical-device.h  physical-devices.c  physical-devices.h  pipeline-layout.c  pipeline-layout.h  pipeline.c  pipeline.h  queue-family.c  queue-family.h  queue.c  queue.h  queueing.c  renderpass.c  (+12 more)
src/vulkan-sandbox/device/: logical.c  physical.c  physical.h
src/vulkan-sandbox/vulkan/: init.c  init.h
src/vulkan-sandbox/window/: init.c  init.h
